force-app/main/default/objects/Lead/fields/Purchasing_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Timeline__c</fullName>
    <description>Captures the Lead&apos;s expected procurement window. Originates from LeadSource Céleste Vineyards - Business Inquiry Form. Primary input for Priority_Level__c calculation logic and Lead scoring.</description>
    <inlineHelpText>Indicate Lead&apos;s expected procurement window. Originates from LeadSource Céleste Vineyards - Business Inquiry Form. This value determines the automated Priority_Level__c calculation and Lead scoring.</inlineHelpText>
    <label>Purchasing Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Need (Contracting)</fullName>
            </value>
            <value>
                <fullName>Short-Term (Within 30 Days)</fullName>
            </value>
            <value>
                <fullName>Evaluating Vendors (Next 90 Days)</fullName>
            </value>
            <value>
                <fullName>Budget Planning (Future Quarter)</fullName>
            </value>
            <value>
                <fullName>Information Gathering</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>