force-app/main/default/objects/Lead/fields/Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status__c</fullName>
    <description>Visual formula field derived from Qualified__c. Displays a qualification indicator for sales users based on the lead&apos;s current qualification state.</description>
    <formula>IF(
    Qualified__c,
    &quot;✅ Qualified&quot;,
    &quot;❌ Not Qualified&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visual qualification indicator. ✅ = Qualified for sales engagement. ❌ = Disqualified based on lead intake criteria.</inlineHelpText>
    <label>Qualification Status</label>
    <type>Text</type>
</CustomField>